[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoast"
version = "0.1.0"
description = "Python Toolkit for Ocean, Atmospheric, and Surface-wave Turbulence"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Galen Egan", email = "galenegan@gmail.com"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physical Oceanography",
]
keywords = ["oceanography", "atmospheric", "turbulence", "scientific-computing"]

# Core dependencies based on actual imports in your code
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "matplotlib>=3.5.0",
    "h5py>=3.7.0",
    "netCDF4>=1.6",
    "mat73>=0.65"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff >= 0.4",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

# Documentation dependencies
docs = [
      "mkdocs>=1.6",
      "mkdocs-material>=9.0",
      "mkdocstrings[python]>=0.25",
      "mkdocs-jupyter>=0.24",   # if you want notebook pages
]


# Jupyter notebook dependencies
jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "nbconvert>=7.0.0",
    "matplotlib>=3.5.0",
]

# All optional dependencies
all = [
    "pytoast[dev,docs,jupyter]",
]

[project.urls]
Homepage = "https://github.com/your-username/pytoast"
Documentation = "https://pytoast.readthedocs.io"
Repository = "https://github.com/your-username/pytoast.git"
"Bug Tracker" = "https://github.com/your-username/pytoast/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["pytoast"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["py-tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# mypy type checking
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "pandas.*",
    "mat73.*",
    "h5py.*",
    "netCDF4.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "NPY", "W505"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Similar options to Black formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120